--- a/index.html
+++ b/index.html
@@ -1,81 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
+<head>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="Landing-Page">
 
-    <title>Bare - Start Bootstrap Template</title>
+  <title>Brayan Quevedo Ramos - Landing</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <!--Bootstrap core CSS-->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <style>
-      body {
-        padding-top: 54px;
-      }
-      @media (min-width: 992px) {
-        body {
-          padding-top: 56px;
-        }
-      }
+  <!--CSS-->
+  <link href="vendor/bootstrap/css/index.css" rel="stylesheet-main">
 
-    </style>
+</head>
 
-  </head>
+<body>
 
-  <body>
-
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-      <div class="container">
-        <a class="navbar-brand" href="#">Start Bootstrap</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
-    <!-- Page Content -->
+  <!--Navigation-->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          <h1 class="mt-5">A Bootstrap 4 Starter Template</h1>
-          <p class="lead">Complete with pre-defined file paths and responsive navigation!</p>
-          <ul class="list-unstyled">
-            <li>Bootstrap 4.1.1</li>
-            <li>jQuery 3.3.1</li>
-          </ul>
-        </div>
+      <a class="navbar-brand" href="index.html">My Personal Website</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Resume</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact/contact.html">Contact</a>
+          </li>
+        </ul>
       </div>
     </div>
+  </nav>
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <!--Page Content-->
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h1 class="mt-5">Hello And Welcome!</h1>
+        <p class="lead">My name's Brayan Quevedo Ramos and this is my website!
+          It has everything that you would need, from work to personal, social media to meetings-in other words, this website is my online presence.
+          The top of the heading is very annoying, I know, and i'm working on it!
+        </p>
+        <h1 class="mt-5">Let's Get To The Point.</h1>
+        <h3 class="mt-3 text-center">Reasons Why You'd Be Here:</h3>
+        <h4 class="mt-2 text-center">For Enterprise/Business People:</h4>
+        <p class="lead">For you professional business people, I know that your work as a manager is very difficult, so here let's get to the gist.
+          click <a href="#">here</a> to go for what you came for. You have no time to mess around so here you go!
+        </p>
+        <h4 class="mt-2 text-center">For Regular Internet Users:</h4>
+        <p class="lead">Well let's start off with a good old welcome! If you are touring ther website for kicks and giggles, I have to ask, why are you here?
+          Like out of all the websites that you can visit, you chose this one to see?
+          Honestly that is a honor and thank you for coming!
+          My website is always under development, thus always changing!
+        </p>
+        <p class="lead">Since you are not here for business I doubt you will care much about what the 'Resume' section has to offer.
+          What's there is just lot's of fancy words explaining who I am and what I do. If you want the simplistic answer, then you can click the 'About' page and have what you need!
+        </p>
+      </div>
+    </div>
+  </div>
 
-  </body>
+  <!--Bootstrap core JavaScript-->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+</body>
 
 </html>
