MASTER: Contact Page Complete
-Version 1.5-
Again, jumping big numbers!
I have completed the contact section! That's very good progress done IN ONLY ONE DAY YAY!

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -11,6 +11,7 @@
 
     <!--Bootstrap core CSS-->
     <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="contact.css" rel="stylesheet">
 
 </head>
 <body>
@@ -47,7 +48,55 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
+                <h1 class="mt-5 text-center">
+                    Contact Information:
+                </h1>
+                <h2 class="mt-4 text-center">
+                    For Business/Enterprise People
+                </h2>
+
+                <!--Github Link-->
+                <a href="https://github.com/Brayan2134">
+                <img src="../img/github.png">
+                </a>
+
+                <p class="lead">This is my GitHub link!</p>
+                <p class="lead">My GitHub is where I post all of my projects.
+                    You can see what days I work on coding and how much I get done.
+                    All I code is projects that I feel like making.
+                    I'm a very project heavy person, and if you won't give me a project to do, I'll turn it into one!
+                </p>
+                <h2 class="mt-4 text-center">
+                    For Regular Internet Users:
+                </h2>
+
+                <!--Instagram Link-->
+                <a href="https://www.instagram.com/brayan2134/?hl=en">
+                <img src="../img/instagram.png">
+                </a>
                 
+                <p class="lead">My Instagram!</p>
+                <p class="lead">Instagram is the place where I am most active.
+                    I attempt to post pictures of what i'm up to at least somewhat often.
+                    Although I don't post often, I do like/respond/DM people memes and stuff so if you're wondering what i'm doing, I am probability liking photos!
+                </p>
+
+                <!--Facebook Link-->
+                <a href="https://www.facebook.com/brayan.quevedo.98">
+                <img src="../img/facebook.png">
+                </a>
+
+                <p class="lead">Facebook</p>
+                <p class="lead">
+                    Once I tell you this, you'll be very annoyed... The Facebook logo is different than all the other ones.
+                    Why I hear you ask.
+                    The response to that is, welcome to Google.
+                    I was unable to find a good looking logo for the webpage, but if I do, i'll make sure to change it!
+                </p>
+                <p class="lead">
+                    Anyways, it may be weird to put my Facebook on here, and before you think i'm an old person HEAR ME OUT!
+                    I ONLY use Facebook because of Messenger. I love Messenger, and since that requires a Facebook account (and because I had one for almost 10 years now) I included it.
+                </p>
             </div>
         </div>
     </div>
