MASTER: Global Nav/Rename/Start Portfolio (Resume)
-Master 1.6-
We have added global navbar.
Also we have started portfolio

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Resume</a>
+            <a class="nav-link" href="port/portfolio.html">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="about/about.html">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact/contact.html">Contact</a>
@@ -64,7 +64,7 @@
           click <a href="#">here</a> to go for what you came for. You have no time to mess around so here you go!
         </p>
         <h4 class="mt-2 text-center">For Regular Internet Users:</h4>
-        <p class="lead">Well let's start off with a good old welcome! If you are touring ther website for kicks and giggles, I have to ask, why are you here?
+        <p class="lead">Well let's start off with a good old welcome! If you are touring there website for kicks and giggles, I have to ask, why are you here?
           Like out of all the websites that you can visit, you chose this one to see?
           Honestly that is a honor and thank you for coming!
           My website is always under development, thus always changing!
