--- a/contact/contact.html
+++ b/contact/contact.html
@@ -31,10 +31,10 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Resume</a>
+                <a class="nav-link" href="../port/portfolio.html">Portfolio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="../about/about.html">About</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contact/contact.html">Contact</a>
