--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
           It has everything that you would need, from work to personal, social media to meetings-in other words, this website is my online presence.
           The top of the heading is very annoying, I know, and i'm working on it!
         </p>
+        <hr>
         <h1 class="mt-5">Let's Get To The Point.</h1>
         <h3 class="mt-3 text-center">Reasons Why You'd Be Here:</h3>
         <h4 class="mt-2 text-center">For Enterprise/Business People:</h4>
@@ -71,6 +72,24 @@
         </p>
         <p class="lead">Since you are not here for business I doubt you will care much about what the 'Resume' section has to offer.
           What's there is just lot's of fancy words explaining who I am and what I do. If you want the simplistic answer, then you can click the 'About' page and have what you need!
+        </p>
+        <hr>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 text-center">
+        <h1 class="mt-3">Quicklinks!</h1>
+        <h2 class="mt-3">For Enterprise People</h2>
+        <p class="mt-3 lead">So, we don't really have anything for you fancy people,
+          but if you want click <a href="port/portfolio.html">here</a> to go to my portfolio.
+        </p>
+        <h2 class="mt-3">For Regular Internet People</h2>
+        <p class="lead mt-3 mb-5">I know this looks SUPER redundant, but like if you want,
+          you can come to my blog <a href="blog/blog.html">here!</a>
+          It's not going to be super interesting at first, but like maybe soon?
         </p>
       </div>
     </div>
