--- a/port/portfolio.html
+++ b/port/portfolio.html
@@ -31,7 +31,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../port/portfolio.html">Portfolio</a>
+                <a class="nav-link" href="portfolio.html">Portfolio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="../about/about.html">About</a>
@@ -62,8 +62,8 @@
         <tbody>
           <tr>
             <td>Coria Estates</td>
-            <td></td>
-            <td></td>
+            <td>Susie</td>
+            <td>Coria</td>
             <td></td>
             <td></td>
             <td></td>
