Redid Website Design, Added 'Portfolio' Information
-Version 2.0-
We made it to 2.0! We added lots for offloading for us, and we made a 'mini' redesign!

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -11,8 +11,10 @@
 
     <!--Bootstrap core CSS-->
     <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="contact.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="contact.css">
 </head>
 <body>
 
@@ -97,12 +99,20 @@
                     Anyways, it may be weird to put my Facebook on here, and before you think i'm an old person HEAR ME OUT!
                     I ONLY use Facebook because of Messenger. I love Messenger, and since that requires a Facebook account (and because I had one for almost 10 years now) I included it.
                 </p>
+
+                <!--Twitter Link-->
+                <a href="https://twitter.com/BrayanQ44997157?s=09">
+                <img src="../img/twitter-logo.jpg">
+                </a>
+
+                <p class="lead">Twitter</p>
+                <p class="lead">
+                    Alright so I just rant on here so yeah...
+                </p>
             </div>
         </div>
     </div>
     
     <!--Bootstrap core JavaScript-->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
