--- a/port/portfolio.html
+++ b/port/portfolio.html
@@ -12,6 +12,9 @@
     <!--Bootstrap core CSS-->
     <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="port.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 </head>
 <body>
@@ -45,31 +48,69 @@
     </nav>
 
     <!--Section References-->
-    <div id="container">
+    <div class="container">
       <h2 class="mt-5">References</h2>
-      <p class="mt-5">You are allowed to contact any of these refrences at anytime!</p>
+      <p>You are allowed to contact any of these references at anytime!</p>
       <table class="table table-striped">
         <thread>
           <tr>
             <th>Company</th>
-            <th>First Name</th>
-            <th>Last Name</th>
+            <th>First Name/Last Name</th>
             <th>Email</th>
             <th>Phone Number</th>
             <th>Relationship</th>
+            <th>Worked At For</th>
           </tr>
         </thread>
         <tbody>
           <tr>
             <td>Coria Estates</td>
-            <td>Susie</td>
-            <td>Coria</td>
+            <td>Susie Coria</td>
             <td></td>
             <td></td>
+            <td>Employer</td>
+            <td>June 2016 - August 2016</td>
+          </tr>
+          <tr>
+            <td>Berry Smooth</td>
+            <td>Perla Brambila</td>
             <td></td>
+            <td></td>
+            <td>Employer</td>
+            <td>June 2018 - Current</td>
           </tr>
         </tbody>
       </table>
+      <hr>
     </div>
+
+    <!--Work Experience-->
+
+    <!--Volunteering-->
+    <div class="container">
+        <h2>Volunteering</h2>
+        <p class="text-secondary">Total Hours Volunteering: 3</p>
+        <div class="panel-group" id="accordion">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h4 class="panel-title">
+                <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">Food Bank 5/12/18 - 3 Hours</a>
+              </h4>
+            </div>
+            <div id="collapse1" class="panel-collapse collapse in">
+              <div class="panel-body">On this day, there was an event at the local Salem Food Bank.
+                I decided to go and help on this day with some friends. The event started at 1pm and ended at 4pm. (3 hours)
+                There were two sections - people who made sure the food was fresh, and us - people who got cans and food,
+                and put it where it was supposed to go. Beans go in the beans section, mango's in the fruit section and so on.
+              </div>
+            </div>
+          </div>
+          
+          </div>
+        </div> 
+      </div>
+
+
+    <!--Certifications-->
 </body>
 </html>
