--- a/about/about.html
+++ b/about/about.html
@@ -12,7 +12,10 @@
     <!--Bootstrap core CSS-->
     <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="contact.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+   
 </head>
 <body>
 
@@ -43,3 +46,9 @@
           </div>
         </div>
     </nav>
+
+    <!--Header-->
+    <div class="container mt-5 pt-3">
+      <h3>About Me:</h3>
+      <p>Like I said on my landing page, i'm just a regular guy.</p>
+    </div>
