--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
   <!--CSS-->
   <link href="vendor/bootstrap/css/index.css" rel="stylesheet-main">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
 </head>
 
