--- a/Version 1/port/portfolio.html
+++ b/Version 1/port/portfolio.html
@@ -120,13 +120,13 @@
         <!-- The slideshow -->
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="la.jpg" alt="Los Angeles" width="1100" height="500">
+            <img src="la.jpg" alt="Image 1" width="1100" height="500">
           </div>
           <div class="carousel-item">
-            <img src="chicago.jpg" alt="Chicago" width="1100" height="500">
+            <img src="chicago.jpg" alt="Image 2" width="1100" height="500">
           </div>
           <div class="carousel-item">
-            <img src="ny.jpg" alt="New York" width="1100" height="500">
+            <img src="ny.jpg" alt="Image 3" width="1100" height="500">
           </div>
         </div>
         
@@ -137,7 +137,7 @@
         <a class="carousel-control-next" href="#day1" data-slide="next">
           <span class="carousel-control-next-icon"></span>
         </a>
-      </div>
+    </div>
   </div>
   <hr>
 
@@ -170,12 +170,16 @@
           <div class="panel panel-default">
             <div class="panel-heading">
               <h4 class="panel-title">
-                <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">SQL Fundamental's Certification - SoloLearn</a>
+                <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
+                  SQL Fundamental's Certification - SoloLearn</a>
               </h4>
-            </div>
+                </div>
             <div id="collapse3" class="panel-collapse collapse in">
               <div class="panel-body">
                 <img src="../img/sql-cert.jpg" class="col-sm-12">
+                Completed: February 8, 2018. I've always had an interest in backend development, so when I learned that 
+                SoloLearn had a SQL Certification, I had to get it. Data manipulation and data science are topics
+                that interest me in backend development, so having an opportunity to learn about it was super cool to me!
               </div>
             </div>
           </div>
