--- a/Version 2/index.html
+++ b/Version 2/index.html
@@ -29,10 +29,6 @@
             height: 100vh;
 
             /*Text Format*/
-            align-items: center;
-            justify-content: center;
-            color: white;
-            text-shadow: 0 0 1px #000;
         }
 
         .parallax::after{
@@ -103,10 +99,36 @@
     <!--CSS Parallax-->
     <main class="wrapper">
         <section class="section parallax bg1">
-            <h1 class="text-center">Brayan Quevedo</h1><br>
+            <h1 class="text-center display-1">Brayan Quevedo</h1><br>
         </section>
+
+        <!--First Box-->
         <section class="section static">
+            <div class="container-fluid">
+                <!--Top Side-->
+                <div class="row">
+                    <div class="col-sm-12">
+                        <h2 class="text-center display-2">My Story</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <!--Left Side-->
+                    <div class="col-sm-6">
+                        <span class="float-sm-left">
+                        <img src="#">
+                        </span>
+                    </div>
+                    <!--Right Side-->
+                    <div class="col-sm-6">
+                        <span class="float-sm-right">
+                            <h1 class="ml-5">About Me</h1>
+                        </span>
+                    </div>
+                </div>
+            </div>
         </section>
+
+        <!--Second Box-->
         <section class="section parallax bg2">
         </section>
     </main>
