--- a/Version 2/index.html
+++ b/Version 2/index.html
@@ -2,6 +2,10 @@
 <html>
 <head>
     <html lang="en">
+    <!--If You're Reading This Then You're The Real Cool People!-->
+
+    <!--Page Title-->
+    <title>Brayan Quevedo Ramos - Landing Page</title>
 
     <!--Required meta tags-->
     <meta charset="utf-8">
@@ -55,8 +59,12 @@
             background-image: url("img/profile.jpg");
         }
 
-        .bg2::after{
-            background-color: teal;
+        .bg2{
+            background-color:#FE828C;
+        }
+
+        .bg3{
+            background-color: #191970;
         }
     </style>
 
@@ -102,35 +110,116 @@
             <h1 class="text-center display-1">Brayan Quevedo</h1><br>
         </section>
 
-        <!--First Box-->
+
+        <!--Second Box-->
         <section class="section static">
             <div class="container-fluid">
+
                 <!--Top Side-->
                 <div class="row">
                     <div class="col-sm-12">
-                        <h2 class="text-center display-2">My Story</h2>
+                        <h2 class="text-center display-2 mb-3">My Story</h2>
                     </div>
                 </div>
                 <div class="row">
+
                     <!--Left Side-->
                     <div class="col-sm-6">
                         <span class="float-sm-left">
-                        <img src="#">
+                        <img src="img/w1-pic.jpg" class="col-sm-12">
                         </span>
                     </div>
+
                     <!--Right Side-->
                     <div class="col-sm-6">
-                        <span class="float-sm-right">
-                            <h1 class="ml-5">About Me</h1>
+                        <span>
+                            <h1 class="text-center">About Me</h1>
+                            <p class="lead text-center">
+                                Hello there! My name is Brayan Quevedo!
+                                I'm a high school student attending Sprague High School.
+                                I'm currently a freshmen who just loves to code.
+                                I do a lot of simple projects that add no real world value since I just love the process of coding!
+                            </p>
+                            <h2 class="text-center">What I code</h2>
+                            <p class="lead text-center">
+                                If you couldn't already tell, I love to develop for the web!
+                                I aspire to become a full stack web-developer some day,
+                                working for a big company, or making my own company to help me accomplish my goals!
+                            </p>
                         </span>
                     </div>
                 </div>
             </div>
         </section>
 
-        <!--Second Box-->
-        <section class="section parallax bg2">
+        <!--Third Box-->
+        <section class="section static bg2">
+            <div class="container-fluid">
+
+                <!--Top-->
+                <div class="col-sm-12">
+                    <span>
+                        <h1 class="text-center display-2 mb-3 text-white">Development</h1>
+                    </span>
+                </div>
+
+                <!--Left-->
+                <div class="col-sm-6 float-left">
+                    <h2 class="text-center text-white mb-4">Web Development Languages</h2>
+                    <h4 class="text-white">HTML - Know Very Well</h4>
+                    <h4 class="text-white">CSS - Know Very Well</h4>
+                    <h4 class="text-white">PHP - Have A Basic Understanding</h4>
+                    <h4 class="text-white">JS - Don't Know</h4>
+                    <h2 class="text-center text-white mb-4 mt-4">Other Languages</h2>
+                    <h4 class="text-white">SQL - Know Very Well</h4>
+                    <h4 class="text-white">Python - Have A Basic Understanding</h4>
+                </div>
+
+                <!--Right-->
+                <div class="col-sm-6 float-right">
+                    <img src="img/example-developer.jpg" class="col-sm-12">
+                <p class="text-white">Not me coding, but an example of someone developing (at least I hope) great software!</p>
+                </div><!--End Right Section-->
+            </div><!--End Container-->
         </section>
-    </main>
+
+        <!--3rd Box-->
+        <section class="section static bg3">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <h1 class="display-2 text-white text-center mb-3">Other</h1>
+                    </div>
+
+                    <!--Left-->
+                    <div class="col-lg-6">
+                        <h2 class="text-center text-white">Acknowledgments</h2>
+                        <p class="lead text-white">
+                            Here's the part where I reference where I got help from.
+                            Yes, because i'm always learning new techniques to learning development,
+                            I needed some help.
+                            I feel like I was inspired by some of the code I came across.
+                            The right thing to do is give back!
+                        </p>
+                        <p class="lead text-white">
+                            <a href="https://getbootstrap.com/docs/4.0/components/navbar/" style="color: silver;">Where I got the navbar from.</a>
+                        </p>
+                    </div>
+
+                    <!--Right-->
+                    <div class="col-lg-6">
+                        <h2 class="text-center text-white">Website Problems</h2>
+                        <p class="lead text-white">
+                            Every developer does make mistakes - they're human!
+                            Now on that topic, I made some mistakes developing this website.
+                            While the desktop and tablet version of these website's are great,
+                            the mobile version looks like a mess!
+                            I'm going to fix that in the coming days!
+                        </p>
+                    </div>
+                </div>
+            </div><!--End Container-->
+        </section>
+    </main><!--End CSS Parallax-->
 </body>
 </html>
