--- a/Version 2/index.html
+++ b/Version 2/index.html
@@ -95,7 +95,7 @@
                 <!--In Development-->
                 <!--Blog-->
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="works/blog.html">Blog</a>
+                    <a class="nav-link disabled" href="works/blog/blog.html">Blog</a>
                 </li>
             </ul>
         </div>
