--- a/Version 2/content/portfolio/portfolio.html
+++ b/Version 2/content/portfolio/portfolio.html
@@ -113,7 +113,7 @@
     <div class="container-fluid">
         <div class="col-lg-12">
             <h1 class="display-1 text-center">
-                Portfolio
+                Portfolio.
             </h1>
             <p class="text-secondary text-center">
                 Everything work/experience related shall be kept here.
@@ -134,7 +134,7 @@
             <!--Top-->
             <div class="col-lg-12">
                 <h1 class="display-2 text-center">
-                    Work Experience
+                    Work Related Experience.
                 </h1>
                 <p class="text-secondary text-center">
                     This does mean that if I was at a job site at some point, I have recorded it. <br>
@@ -145,7 +145,7 @@
             <!--Left Side-->
             <div class="col-lg-3">
                 <h3 class="text-center">
-                    Job Shadow Experience
+                    Job Shadow Experience.
                 </h3>
                 <p class="lead">
                     Garmin Ltd.
@@ -167,7 +167,7 @@
             <!--Volunteer-->
             <div class="col-lg-9">
                 <h3 class="text-center">
-                    Volunteering
+                    Volunteering.
                 </h3>
                 <p class="text-secondary text-center">
                     Total Hours Volunteered - 3
@@ -186,6 +186,16 @@
                         </div>
                         <!--Food Drive Card Body-->
                         <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+                            On May 12 2018, there was a food drive event that was going on.
+                            The purpose of that food drive was to help families who could not afford food, have some.
+                            I decided to grab some friends and help out.
+                            At the food drive, there were two stations.
+                            Station one was unpacking and safety team.
+                            This team was responsible for taking out food that was collected from the bags,
+                            and making sure that they were not expired.
+                            Then there was our group.
+                            Our group was responsible for placing the items in the correct categories
+                            e.g - Soups, Vegetables, Fruits, Deserts etc.
                             <div class="card-body">
                             </div>
                         </div>
@@ -199,5 +209,21 @@
     <div class="parallax" id="bg2"></div>
 
     <!--Container 2-->
+    <div class="container-fluid">
+        <div class="row">
+            <!--Header-->
+            <div class="col-lg-12">
+                <h2 class="display-2 text-center">
+                    Current/Past Employment.
+                </h2>
+                <p class="text-secondary text-center">
+                    Don't mind the mountain picture <br>
+                    It's not mine but we have to remember that <br>
+                    we need to also go outside and enjoy Nature! <br>
+                    I don't know who took the picture.
+                </p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
