Nearing Completion Of Contact Page
We have almost everything done in the contact page!
Just add SVG's!

--- a/Version 2/content/contact/contact.html
+++ b/Version 2/content/contact/contact.html
@@ -161,6 +161,30 @@
                 <h2 class="text-center display-4">
                     Non-Developer Social Media Accounts.
                 </h2>
+                <!--Instagram-->
+                <h3 class="text-center col-lg-12">
+                    Instagram
+                </h3>
+                <a href="https://www.instagram.com/brayan2134/?hl=en">
+                <img src="../../img/ig-logo.png" alt="Instagram Logo" class="img-thumbnail col-lg-2">
+                </a>
+                <p class="lead text-center">
+                    This is my Instagram account.
+                    I just post funny pictures of what i'm up to, every month or so!
+                </p>
+                <hr>
+                <!--Twitter-->
+                <h3 class="text-center col-lg-12">
+                    Twitter
+                </h3>
+                <a href="https://twitter.com/BrayanQ44997157">
+                <img src="../../img/twitter-logo.jpg" alt="Twitter Logo" class="img-thumbnail col-lg-2">
+                </a>
+                <p class="lead text-center">
+                    This is my Twitter account. All I do on it is post funny developer memes and
+                    rant about whatever i'm doing.
+                </p>
+                <hr>
             </div>
             <!--Right Side-->
             <!--Developer Socials-->
@@ -168,6 +192,28 @@
                 <h2 class="text-center display-4">
                     Developer Related Social Media Accounts.
                 </h2>
+                <!--GitHub-->
+                <h3 class="text-center col-lg-12">
+                    Github
+                </h3>
+                <a href="https://github.com/Brayan2134">
+                <img src="../../img/gh-logo.png" alt="Github Logo" class="img-thumbnail col-lg-2">
+                </a>
+                <p class="lead text-center">
+                    I use GitHub as a primary source of uploading repositories.
+                    I upload whatever i'm doing up on there*1.
+                </p>
+                <hr>
+                <!--Slack-->
+                <h3 class="text-center col-12">
+                    Slack
+                </h3>
+                <img src="../../img/slack.png" alt="Slack Logo" class="img-thumbnail col-lg-2">
+                <p class="lead text-center">
+                    If you'd like me to join your Slack workspace, contact me at the email below! 
+                    (Only available if I agree to work for project)
+                </p>
+                <hr>
             </div>
         </div>
     </div>
