Contact Page Done
All comps and stuff done!

--- a/Version 2/content/contact/contact.html
+++ b/Version 2/content/contact/contact.html
@@ -54,13 +54,6 @@
             background-repeat: no-repeat;
             background-size: cover;
         }
-
-        /*Parallax Mobile - May Increase PX*/
-        @media only screen and (max-device-width: 1366px) {
-            .parallax {
-                background-attachment: scroll;
-            }
-        }
     </style>
 
 </head>
@@ -183,6 +176,32 @@
                 <p class="lead text-center">
                     This is my Twitter account. All I do on it is post funny developer memes and
                     rant about whatever i'm doing.
+                </p>
+                <hr>
+                <!--VSCO-->
+                <h3 class="text-center col-lg-12">
+                    VSCO
+                </h3>
+                <a href="https://vsco.co/brayan2134/images/1">
+                <img src="../../img/VSCO.jpg" alt"VSCO Logo" class="img-thumbnail col-lg-2">
+                </a>
+                <p class="lead text-center">
+                    All I do on this social media is post ok pictures.
+                    Every time I go on a photo shoot, I may post something meaningful to the photo shoot.
+                </p>
+                <hr>
+                <!--Facebook-->
+                <h3 class="text-center col-lg-12">
+                    Facebook
+                </h3>
+                <a href="https://www.facebook.com/brayan.quevedo.98">
+                <img src="../../img/fb.jpg" alt="Facebook Logo" class="img-thumbnail col-lg-2">
+                </a>
+                <p class="text-center lead">
+                    It may be weird that i'm using Facebook but hear me out!
+                    I only use Facebook for Facebook Messenger.
+                    I have a lot of people whomst I keep in contact with via Facebook,
+                    but I don't post it or am actively on it.
                 </p>
                 <hr>
             </div>
