--- a/Version 2/content/portfolio/portfolio.html
+++ b/Version 2/content/portfolio/portfolio.html
@@ -99,7 +99,7 @@
 
                 <!--Blog-->
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="../../works/blog/blog.html">Blog</a>
+                    <a class="nav-link" href="../../works/blog/blog.html">Blog</a>
                 </li>
             </ul>
         </div>
