--- a/Version 2/index.html
+++ b/Version 2/index.html
@@ -88,12 +88,23 @@
                 <!--In Development-->
                 <!--Blog-->
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="works/blog/blog.html">Blog</a>
+                    <a class="nav-link" href="works/blog/blog.html">Blog</a>
                 </li>
             </ul>
         </div>
     </nav>
         
+    <!--Header-->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-12">
+                <h2 class="display-4 text-center">
+                    Brayan Quevedo's Personal Website.
+                </h2>
+            </div>
+        </div>
+    </div>
+
     <!--Parallax Effect-->
     <div class="parallax"></div>
 
