--- a/Version 2/content/portfolio/portfolio.html
+++ b/Version 2/content/portfolio/portfolio.html
@@ -41,6 +41,14 @@
             background-size: cover;
         }
 
+        .display-2{
+            word-break: break-word;
+        }
+
+        .display-1{
+            word-break: break-all;
+        }
+
         #bg1{
             /*IMG*/
             background-image: url('../../img/example-html-dev.jpg');
@@ -58,6 +66,20 @@
         #bg2{
             /*IMG*/
             background-image: url('../../img/tran1.jpg');
+
+            /*Scroll*/
+            height: 100%;
+
+            /*Parallax*/
+            background-attachment: fixed;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+
+        #bg3{
+            /*IMG*/
+            background-image: url('../../img/img4.jpg');
 
             /*Scroll*/
             height: 100%;
@@ -219,7 +241,7 @@
                     I don't know who took the picture.
                 </p>
             </div>
-            <div class="col-lg-12">
+            <div class="col-lg-12 table-responsive">
                 <table class="table table-dark">
                     <thead>
                         <tr>
@@ -254,7 +276,75 @@
                     </tbody>
                 </table>
             </div>
+        </div>
+    </div>
 
+    <!--Transition-->
+    <!--Parallax-->
+    <div class="parallax" id="bg3"></div>
+
+    <!--Certifications-->
+    <div class="container">
+        <div class="row">
+
+            <!--Top-->
+            <div class="col-lg-12">
+                <h2 class="display-2 text-center">
+                    Certifications.
+                </h2>
+            </div>
+
+            <!--Certifications-->
+            <div class="col-lg-8">
+                <div id="accordion">
+                    <!--Card One-->
+                    <div class="card">
+                      <div class="card-header" id="headingOne">
+                        <h5 class="mb-0">
+                          <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            Oregon Food Handlers Card
+                          </button>
+                        </h5>
+                      </div><!--End Header-->
+                      <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+                        <div class="card-body">
+                        </div>
+                      </div>
+                    </div>
+
+                    <!--Card Two-->
+                    <div class="card">
+                      <div class="card-header" id="headingTwo">
+                        <h5 class="mb-0">
+                          <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            Collapsible Group Item #2
+                          </button>
+                        </h5>
+                      </div>
+
+                      <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+                        <div class="card-body">
+                          Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                        </div>
+                      </div>
+                    </div>
+                    
+                    <div class="card">
+                      <div class="card-header" id="headingThree">
+                        <h5 class="mb-0">
+                          <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            Collapsible Group Item #3
+                          </button>
+                        </h5>
+                      </div>
+                      <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+                        <div class="card-body">
+                          Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+            </div>
         </div>
     </div>
 </body>
