--- a/Version 2/content/portfolio/portfolio.html
+++ b/Version 2/content/portfolio/portfolio.html
@@ -284,7 +284,7 @@
     <div class="parallax" id="bg3"></div>
 
     <!--Certifications-->
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
 
             <!--Top-->
@@ -295,55 +295,53 @@
             </div>
 
             <!--Certifications-->
-            <div class="col-lg-8">
+            <div class="col-lg-6">
                 <div id="accordion">
-                    <!--Card One-->
-                    <div class="card">
-                      <div class="card-header" id="headingOne">
-                        <h5 class="mb-0">
-                          <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                            Oregon Food Handlers Card
-                          </button>
+
+                <!--Card One-->
+                <div class="card">
+                    <div class="card-header" id="headingOne">
+                        <h5 class="mb-3">
+                            <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                Oregon Food Handlers Card
+                            </button>
                         </h5>
-                      </div><!--End Header-->
-                      <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+                    </div><!--End Header-->
+
+                    <!--Card One Body-->
+                    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
                         <div class="card-body">
                         </div>
-                      </div>
+                    </div><!--End Card Body-->
+                </div><!--End Card-->
+
+                <!--Card Two-->
+                <div class="card">
+                    <div class="card-header" id="headingTwo">
+                        <h5 class="mb-3">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                HTML Fundamentals Certification
+                            </button>
+                        </h5>
                     </div>
 
-                    <!--Card Two-->
-                    <div class="card">
-                      <div class="card-header" id="headingTwo">
-                        <h5 class="mb-0">
-                          <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                            Collapsible Group Item #2
-                          </button>
-                        </h5>
-                      </div>
+                    <!--Card Two Body-->
+                    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+                        <div class="card-body">
+                        </div>
+                    </div><!--End Card Body-->
+                </div><!--End Card Two-->
 
-                      <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-                        <div class="card-body">
-                          Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-                        </div>
-                      </div>
-                    </div>
-                    
-                    <div class="card">
-                      <div class="card-header" id="headingThree">
-                        <h5 class="mb-0">
-                          <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                            Collapsible Group Item #3
-                          </button>
+                <!--Card Three-->
+                <div class="card">
+                    <div class="card-header" id="headingThree">
+                        <h5 class="mb-3">
+
                         </h5>
-                      </div>
-                      <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-                        <div class="card-body">
-                          Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-                        </div>
-                      </div>
                     </div>
-                  </div>
+                </div>
+
+            </div><!--Global Settings-->
             </div>
         </div>
     </div>
