Added Cert Names

--- a/Version 2/content/portfolio/portfolio.html
+++ b/Version 2/content/portfolio/portfolio.html
@@ -336,8 +336,17 @@
                 <div class="card">
                     <div class="card-header" id="headingThree">
                         <h5 class="mb-3">
-
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
+                               SQL Fundamentals Certification 
+                            </button>
                         </h5>
+                    </div>
+                </div>
+
+                <!--Card Three Body-->
+                <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+                    <div class="card-body">
+                        <img src="../../"
                     </div>
                 </div>
 
