--- a/Version 2/content/portfolio/portfolio.html
+++ b/Version 2/content/portfolio/portfolio.html
@@ -294,64 +294,45 @@
                 </h2>
             </div>
 
-            <!--Certifications-->
-            <div class="col-lg-6">
-                <div id="accordion">
+            <!--Certification-->
+            <div class="col-lg-12">
+                <p class="text-secondary text-center">These buttons below are my certifications.
+                    This shall change with time, as I progress through life.
+                </p>
 
-                <!--Card One-->
-                <div class="card">
-                    <div class="card-header" id="headingOne">
-                        <h5 class="mb-3">
-                            <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                Oregon Food Handlers Card
-                            </button>
-                        </h5>
-                    </div><!--End Header-->
+                <p>
+                    <a class="btn btn-primary" data-toggle="collapse" href="#foodhandlers" role="button" aria-expanded="false" aria-controls="foodhandlers">Food Handlers Card</a>
+                    <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#htmlcert" aria-expanded="false" aria-controls="htmlcert">HTML/HTML 5 Fundamentals Certification</button>
+                    <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#SQL" aria-expanded="false" aria-controls="sqlcert">SQL Fundamentals Certification</button>
+                </p>
 
-                    <!--Card One Body-->
-                    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
-                        <div class="card-body">
+                <!--Food Handlers Card-->
+                <div class="col">
+                    <div class="collapse multi-collapse" id="foodhandlers">
+                        <div class="card card-body">
+                            <img src="../../img/BQR-FH-page-001.jpg" class="col-lg-12">
                         </div>
-                    </div><!--End Card Body-->
-                </div><!--End Card-->
-
-                <!--Card Two-->
-                <div class="card">
-                    <div class="card-header" id="headingTwo">
-                        <h5 class="mb-3">
-                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                HTML Fundamentals Certification
-                            </button>
-                        </h5>
                     </div>
+                </div><!--End Card 1-->
 
-                    <!--Card Two Body-->
-                    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-                        <div class="card-body">
+                <!--HTML Certification-->
+                <div class="col">
+                    <div class="collapse multi-collapse" id="htmlcert">
+                        <div class="card card-body">
+                            <img src="../../img/html-cert.jpg" class="col-lg-12">
                         </div>
-                    </div><!--End Card Body-->
-                </div><!--End Card Two-->
+                    </div>
+                </div><!--End Card 2-->
 
-                <!--Card Three-->
-                <div class="card">
-                    <div class="card-header" id="headingThree">
-                        <h5 class="mb-3">
-                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
-                               SQL Fundamentals Certification 
-                            </button>
-                        </h5>
+                <!--SQL Certification-->
+                <div class="col">
+                    <div class="collapse multi-collapse" id="SQL">
+                        <div class="card card-body">
+                            <img src="../../img/sql-cert.jpg" class="col-lg-12">
+                        </div>
                     </div>
                 </div>
-
-                <!--Card Three Body-->
-                <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-                    <div class="card-body">
-                        <img src="../../"
-                    </div>
-                </div>
-
             </div><!--Global Settings-->
-            </div>
         </div>
     </div>
 </body>
