Setting About Certifications Foundation.

--- a/Version 2/content/portfolio/portfolio.html
+++ b/Version 2/content/portfolio/portfolio.html
@@ -301,7 +301,7 @@
                 </p>
 
                 <p>
-                    <a class="btn btn-primary" data-toggle="collapse" href="#foodhandlers" role="button" aria-expanded="false" aria-controls="foodhandlers">Food Handlers Card</a>
+                    <a class="btn btn-primary" data-toggle="collapse" href="#foodhandlers" role="button" aria-expanded="true" aria-controls="foodhandlers">Food Handlers Card</a>
                     <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#htmlcert" aria-expanded="false" aria-controls="htmlcert">HTML/HTML 5 Fundamentals Certification</button>
                     <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#SQL" aria-expanded="false" aria-controls="sqlcert">SQL Fundamentals Certification</button>
                 </p>
@@ -332,8 +332,16 @@
                         </div>
                     </div>
                 </div>
-            </div><!--Global Settings-->
-        </div>
+                <hr>
+            </div><!--Container Settings-->
+
+            <!--About Certifications-->
+            <div class="col-lg-12">
+                <h4 class="display-4 text-center">
+                    Certifications - Explained.
+                </h4>
+            </div>
+        </div><!--Global Settings-->
     </div>
 </body>
 </html>
