Redo Containers/Start Meaning

--- a/Version 2/content/portfolio/portfolio.html
+++ b/Version 2/content/portfolio/portfolio.html
@@ -284,7 +284,7 @@
     <div class="parallax" id="bg3"></div>
 
     <!--Certifications-->
-    <div class="container-fluid">
+    <div class="container">
         <div class="row">
 
             <!--Top-->
@@ -334,12 +334,41 @@
                 </div>
                 <hr>
             </div><!--Container Settings-->
+        </div><!--Global Settings-->
+    </div>
+
+    <div class="container-fluid">
+        <div class="row">
 
             <!--About Certifications-->
             <div class="col-lg-12">
                 <h4 class="display-4 text-center">
                     Certifications - Explained.
                 </h4>
+            </div>
+
+            <!--Left-->
+            <div class="col-lg-6">
+                <h4 class="text-center">
+                    Pictures.
+                </h4>
+            </div>
+
+            <!--Right-->
+            <div class="col-lg-6">
+                <h4 class="text-center">
+                    Meaning.
+                </h4>
+            </div>
+
+            <!--Content Left-->
+            <div class="col-lg-6 text-center">
+                <img src="../../img/BQR-FH-page-001.jpg" class="col-lg-3">
+            </div>
+
+            <!--Content Right-->
+            <div class="col-lg-6 text-center">
+
             </div>
         </div><!--Global Settings-->
     </div>
