More User Friendly - Break Words

--- a/Version 2/content/portfolio/portfolio.html
+++ b/Version 2/content/portfolio/portfolio.html
@@ -46,7 +46,7 @@
         }
 
         .display-1{
-            word-break: break-all;
+            word-break: break-word;
         }
 
         #bg1{
@@ -232,7 +232,7 @@
             <!--Header-->
             <div class="col-lg-12">
                 <h2 class="display-2 text-center">
-                    Current/Past Employment.
+                    Current / Past Employment.
                 </h2>
                 <p class="text-secondary text-center">
                     Don't mind the mountain picture <br>
