--- a/Version 2/index.html
+++ b/Version 2/index.html
@@ -53,8 +53,12 @@
                 background-size: cover;
             }
 
-            #bg3{
-                background-color: #f5f5dc;
+            .display-2{
+                word-break: break-word;
+            }
+    
+            .display-1{
+                word-break: break-word;
             }
     </style>
 
@@ -155,7 +159,7 @@
     <div class="parallax" id="bg2"></div>
 
     <!--Container Box 2-->
-    <div class="container-fluid" id="bg3">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="display-1 text-center">
