--- a/Version 2/content/contact/contact.html
+++ b/Version 2/content/contact/contact.html
@@ -37,6 +37,13 @@
             background-repeat: no-repeat;
             background-size: cover;
         }
+        .display-2{
+            word-break: break-word;
+        }
+
+        .display-1{
+            word-break: break-word;
+        }
 
         #grad1{
             /*IMG*/
